    4. No order is guaranteed for parameters from forms, contrary to the HTML 4.01 spec

Limitations: HttpUnit does not support JavaScript

                            
Revision History:
Acknowledgements:
    Thanks to Rolf Schmidiger for corrected behavior when failing to find a site
    Thanks to Tom Watkins, Deepa Dihr, Marcos Tarruella for their implementation of
       PutMethodWebRequest

 4-Jun-01
Additions:
    1. Added PutMethodWebRequest
    2. PostMethodWebRequest now has a constructor which allows its contents to be
       taken from an InputSource, like PutMethodWebRequest
           
31-May-01
Problems corrected:
    1. Now throws HttpNotFoundException rather than NullPointerException when
       unable to connect to a web site
    2. I/O exceptions when accessing a site are now thrown, rather than being
       turned into RuntimeException.


22-May-01
Additions:
    1. Reading the character set from a <meta> tag is now supported.

21-May-01
Additions:
    1. selectFile now infers file content for zip extension
    2. <button> tags are now recognized as submit buttons if their type is "submit"
       or not specified.

16-May-01
Additions:
    1. selectFile now can infer file content type for the most common file extensions:
       text, txt, gif, jpg, jpeg, png, html, and htm.
    2. A new version of selectFile allows explicit specification of file content type
       which will override any inferred type.
       
Configuration changes:
    1. The build.xml file has been changed to use a specified directory of dependant jars
       rather than the system classpath. This requires at least ant 1.3. It is no longer
       necessary to specify the classpath parameter when running the unit tests.

 5-May-01 1.2.4
Acknowledgements:
    Thanks to Jim Kimball for finding and fixing the redirection of subframes
    
Problems corrected:
    1. Redirection with subframes was incorrectly targeted at the top frame.