@@ -16,6 +16,11 @@ Acknowledgements:
     Thanks to Tom Watkins, Deepa Dihr, Marcos Tarruella for their implementation of
        PutMethodWebRequest
 
+ 6-Jun-01
+Additions:
+    1. Added ServletUnitClient and InvocationContext to servletunit to
+       permit more granular testing of servlets
+       
  4-Jun-01
 Additions:
     1. Added PutMethodWebRequest
